fixed small header issue on small phones

--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -1,9 +1,9 @@
 /* Mobile first queries */
 #header {
-	height: 225px;
+	height: 450px;
 	max-height: 90vh;
 	background-image: url('../img/mtview.jpg');
-	background-size: 100%;
+	background-size: 200%;
 	background-position: center top;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
@@ -27,7 +27,7 @@
 .clip-text {
 	color: $my-black;
 	background-image: url('../img/mtview.jpg');
-	background-size: 100%;
+	background-size: 200%;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
     -webkit-text-fill-color: transparent;
@@ -42,6 +42,7 @@
 	#header {
 		height: 300px;
 		max-height: 90vh;
+    background-size: 100%;
 	}
 
 	#header h1 {
@@ -51,6 +52,10 @@
 		margin-bottom: 1.6875rem;
 		margin-left: 1rem;
 	}
+
+  .clip-text {
+    background-size: 100%;
+  }
 }
 
 /* Larger than phablet */
